Fixed wrong position of "View JIRA Issue" in the widget.

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -4716,6 +4716,7 @@ a.close{
 		font-size:13px;
 
 		#jira-link {
+			overflow:hidden;
 		border-bottom: dotted 1px #CCC;
 			#jira-view {
 				float:right;
